tests/baselines/reference/jsFileCompilationImportEqualsSyntax.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
tests/cases/compiler/a.js(1,1): error TS8002: 'import ... =' can only be used in a .ts file.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
==== tests/cases/compiler/a.js (1 errors) ====
    import a = b;
    ~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in a .ts file.